History of collective.realestatebroker
======================================

2.2 (unreleased)
----------------

- Copied code from Products.PloneFlashUpload 1.2rc so the upload on
  the album management works again.  (At least with Flash 10 on
  Linux).  [maurits]


2.1 (2009-03-26)
----------------

- Added French translations thanks to Benjamin Klups. [jladage]


2.0.9 (2009-03-04)
------------------

- Allow access to the AlbumView.first_image; an Unauthorized error is
  triggered when using this in for example a collection portlet.
  [maurits]


2.0.8 (2009-01-27)
------------------

- Fixed bug in floorplan filter: the photo management page also filtered them,
  making them impossible to edit. [reinout]


2.0.7 (2009-01-27)
------------------

- Filtering out floorplans from all the photo lists. [reinout]


2.0.6 (2008-12-18)
------------------

- Some html fixes by jladage?


2.0.5 (2008-12-17)
------------------

- Fixed keyerror when floorplans aren't attached to floors. The keyerror
  itself is caught now and the cause has also been removed. [reinout]


2.0.4 (2008-07-30)
------------------

- Added ReportLab and Products.Maps as dependencies in setup.py.
  [maurits]


2.0.3 (2008-07-03)
------------------

- Unchanged from rc4.


2.0.3 rc4 (2008-07-02)
----------------------

- Creating our own img tags from catalog brains instead of doing a
  .getObject() to use archetypes tag() method which wakes up the
  object. [reinout]


2.0.3 rc3 (2008-06-25)
----------------------

- Fixed strange attributeerror on plone 3.1.2. Moving to that plone version
  fixes a kss bug in the album view. [reinout]


2.0.3 rc2 (2008-06-25)
----------------------

- Added optional max_height attribute to insert_image() to allow protection
  for overly large portrait image on the pdf's homepage. [reinout]

- Added css class to table cells that contain an image in the res/comm
  listings so that the image can be aligned vertically if desired. [reinout]
